--- a/raddb/proxy.conf
+++ b/raddb/proxy.conf
@@ -140,6 +140,12 @@ proxy server {
 #  which was awkward.  In 2.0, they have been made independent
 #  from realms, which is better for a number of reasons.
 #
+#  You can proxy to a specific home server by doing:
+#
+#	update control {
+#		Home-Server-Name = "name of home server"
+#	}
+#
 home_server localhost {
 	#
 	#  Home servers can be sent Access-Request packets
@@ -538,6 +544,12 @@ home_server localhost {
 #  In version 2.0, you would need 5 "home_server" sections,
 #  10 'realm" sections, and one "home_server_pool" section to tie the
 #  two together.
+#
+#  You can proxy to a specific home server pool by doing:
+#
+#	update control {
+#		Home-Server-Pool = "name of pool"
+#	}
 #
 home_server_pool my_auth_failover {
 	#
