Explicitly install openssl for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,6 +150,7 @@ jobs:
           mariadb \
           make \
           mruby \
+          openssl \
           talloc
         ln -s `brew --prefix`/opt/make/bin/gmake /usr/local/bin/make
         echo "#! /bin/sh"               >> /usr/local/bin/nproc
