add notes for EAP

--- a/raddb/proxy.conf
+++ b/raddb/proxy.conf
@@ -729,6 +729,9 @@ realm example.com {
 	#
 	#  If you do not want this to happen, uncomment "nostrip" below.
 	#
+	#  Note that if the system is doing EAP, you MUST set the "nostrip"
+	#  option for realms used in EAP.  Otherwise EAP will fail.
+	#
 	# nostrip
 
 	#  There are no more configuration entries for a realm.
