openssl output shouldn't break the build
Fixes #4247

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -49,10 +49,10 @@ override EAPOL_TEST_BIN := $(shell $(top_builddir)/scripts/ci/eapol_test-build.s
 endif
 
 $(BUILD_PATH)/tests/eapol_test/eapol_test.mk: | $(BUILD_PATH)/tests/eapol_test
-	@echo "EAPOL_TEST=" $(EAPOL_TEST_BIN) > $@
-	@echo "TLS1_3=" $(shell strings "$(RADIUSD_BIN)" | grep -q '^tls13_enable$$' && \
-		strings "$(EAPOL_TEST_BIN)" | grep 'tlsv1_3' | head -n 1) >> $@
-	@echo "OPENSSL_OK=" $(shell openssl version | grep -v ' 1\.0') >> $@
+	@echo "EAPOL_TEST=$(EAPOL_TEST_BIN)" > $@
+	@echo "TLS1_3=$(shell strings "$(RADIUSD_BIN)" | grep -q '^tls13_enable$$' && \
+		strings "$(EAPOL_TEST_BIN)" | grep 'tlsv1_3' | head -n 1)" >> $@
+	@echo "OPENSSL_OK=$(shell openssl version | grep -v ' 1\.0' >/dev/null && echo yes)" >> $@
 else
 #
 #  No OpenSSL means that we don't even try to build eapol_test
