--- a/scripts/ci/ldap/slapd2.conf
+++ b/scripts/ci/ldap/slapd2.conf
@@ -26,6 +26,15 @@ database config
 rootdn "cn=admin,cn=config"
 rootpw secret
 
+#
+# Certificates for SSL/TLS connections
+# Note - these will not match the host name so clients need to use 
+#        the "allow" option when checking certificates
+#
+TLSCACertificateFile /tmp/ldap2/certs/cacert.pem
+TLSCertificateFile /tmp/ldap2/certs/servercert.pem
+TLSCertificateKeyFile /tmp/ldap2/certs/serverkey.pem
+
 #######################################################################
 # mdb database definitions
 #
