--- a/.github/workflows/ci-rpm.yml
+++ b/.github/workflows/ci-rpm.yml
@@ -29,8 +29,7 @@ jobs:
           {
             "env": [
               { "NAME": "centos-7", "OS": "centos:7", "DIST": "centos"             },
-              { "NAME": "centos-8", "OS": "centos:8", "DIST": "centos"             },
-              { "NAME": "fedora-rawhide", "OS": "fedora:rawhide", "DIST": "fedora" }
+              { "NAME": "centos-8", "OS": "centos:8", "DIST": "centos"             }
             ]
           }
         EOF
