--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,6 +303,7 @@ jobs:
         SQL_POSTGRESQL_TEST_SERVER: 127.0.0.1
         LDAP_TEST_SERVER: 127.0.0.1
         LDAP_TEST_SERVER_PORT: 3890
+        LDAP_TEST_SERVER_SSL_PORT: 6360
         REST_TEST_SERVER: 127.0.0.1
         REST_TEST_SERVER_PORT: 8080
         REST_TEST_SERVER_SSL_PORT: 8443
