--- a/.github/workflows/ci-scheduled-fuzzing.yml
+++ b/.github/workflows/ci-scheduled-fuzzing.yml
@@ -154,8 +154,12 @@ jobs:
         REMAINING_TIME=$(( $TOTAL_RUNTIME + `cat ~/start_timestamp` - `date +%s` ))
         echo "Fuzzing ${{ steps.pick_commit.outputs.commit_id }}:$PROTOCOL for $REMAINING_TIME secs"
         [[ "$REMAINING_TIME" -lt 1 ]] && exit 1
-        timeout "$REMAINING_TIME" make test.fuzzer.$PROTOCOL FUZZER_TIMEOUT=300 FUZZER_ARGUMENTS="-jobs=10000 -workers=`nproc`" || :
-        cp fuzz-*.log build/fuzzer
+	echo "Fuzzing $(PROTOCOL) for 300s"
+	mkdir -p build/fuzzer
+        timeout "$REMAINING_TIME" make test.fuzzer.$PROTOCOL FUZZER_TIMEOUT=300 FUZZER_ARGUMENTS="-jobs=10000 -workers=`nproc` > buid/fuzzer/$(PROTOCOL).log" || :
+	tail -30 build/fuzzer/$(PROTOCOL).log
+	echo "FAILED fuzzing $(PROTOCOL)"
+	cp fuzz-*.log build/fuzzer
         find build/fuzzer -type f ! -name 'fuzz-*.log' | grep . && exit 1 || :
       env:
         GITHUB_REF: "${{ github.ref }}"
