--- a/src/tests/modules/ldap/module.conf
+++ b/src/tests/modules/ldap/module.conf
@@ -53,6 +53,17 @@ ldap {
 #		realm = 'example.org'
 	}
 
+	global {
+		#  ldap_debug: debug flag for LDAP SDK
+		#  (see OpenLDAP documentation).  Set this to enable
+		#  huge amounts of LDAP debugging on the screen.
+		#  You should only use this if you are an LDAP expert.
+		#
+		#	default: 0x0000 (no debugging messages)
+		#	Example:(LDAP_DEBUG_FILTER+LDAP_DEBUG_CONNS)
+		ldap_debug = 0x0801
+	}
+
 	#
 	#  Generic valuepair attribute
 	#
@@ -349,6 +360,7 @@ ldap {
 		#
 		chase_referrals = yes
 		rebind = yes
+		referral_depth = 2
 
 		#  Seconds to wait for LDAP query to finish. default: 20
 		timeout = 10
@@ -368,14 +380,6 @@ ldap {
 		#  LDAP_OPT_X_KEEPALIVE_INTERVAL
 		interval = 3
 
-		#  ldap_debug: debug flag for LDAP SDK
-		#  (see OpenLDAP documentation).  Set this to enable
-		#  huge amounts of LDAP debugging on the screen.
-		#  You should only use this if you are an LDAP expert.
-		#
-		#	default: 0x0000 (no debugging messages)
-		#	Example:(LDAP_DEBUG_FILTER+LDAP_DEBUG_CONNS)
-		ldap_debug = 0x0028
 	}
 
 	#
@@ -477,5 +481,240 @@ ldap {
 		#
 		#  The solution is to either lower the 'min' connections,
 		#  or increase lifetime/idle_timeout.
+	}
+}
+
+#
+#  Second LDAP connection using SSL
+#
+ldap ldapssl {
+	server = "ldaps://$ENV{LDAP_TEST_SERVER}:$ENV{LDAP_TEST_SERVER_SSL_PORT}/"
+
+	identity = 'cn=admin,dc=example,dc=com'
+	password = secret
+
+	base_dn = 'dc=subdept,dc=example,dc=com'
+
+	sasl {
+	}
+
+	global {
+		ldap_debug = 0x0801
+	}
+
+	valuepair_attribute = 'radiusAttribute'
+
+	update {
+		&control.Password.With-Header	+= 'userPassword'
+		&reply.Idle-Timeout		:= 'radiusIdleTimeout'
+		&reply.Framed-IP-Netmask	:= 'radiusFramedIPNetmask'
+
+		&control			+= 'radiusControlAttribute'
+		&request			+= 'radiusRequestAttribute'
+		&reply				+= 'radiusReplyAttribute'
+	}
+
+	user {
+		base_dn = "ou=people,${..base_dn}"
+
+		filter = "(uid=%{%{Stripped-User-Name}:-%{User-Name}})"
+
+		sasl {
+		}
+	}
+
+	group {
+		base_dn = "ou=groups,${..base_dn}"
+		filter = '(objectClass=groupOfNames)'
+		scope = 'sub'
+		name_attribute = cn
+		membership_filter = "(|(member=%{control.Ldap-UserDn})(memberUid=%{%{Stripped-User-Name}:-%{User-Name}}))"
+		membership_attribute = 'memberOf'
+		cacheable_name = no
+		cacheable_dn = no
+		cache_attribute = 'LDAP-Cached-Membership'
+	}
+
+	profile {
+		filter = '(objectclass=radiusprofile)'
+		default = 'cn=radprofile,ou=profiles,dc=example,dc=com'
+		attribute = 'radiusProfileDn'
+	}
+
+	accounting {
+		reference = "%{tolower:type.%{Acct-Status-Type}}"
+		type {
+			start {
+				update {
+					description := "User %{User-Name} is online"
+				}
+			}
+			interim-update {
+				update {
+					description := "Last seen at %S"
+				}
+			}
+			stop {
+				update {
+					description := "Offline at %S"
+				}
+			}
+		}
+	}
+
+	post-auth {
+		update {
+			description := "User %{User-Name} authenticated"
+		}
+	}
+
+	options {
+#		dereference = 'always'
+
+		chase_referrals = yes
+		rebind = yes
+		referral_depth = 2
+
+		timeout = 10
+		timelimit = 3
+		idle = 60
+		probes = 3
+		interval = 3
+
+	}
+
+	tls {
+		require_cert	= 'allow'
+		ca_file	= 'src/tests/certs/rsa/ca.pem'
+	}
+
+	pool {
+		start = 1
+		min = 1
+		max = 4
+		spare = 0
+		uses = 0
+		lifetime = 0
+		idle_timeout = 60
+		retry_delay = 1
+	}
+}
+
+#
+#  Third LDAP connection using StartTLS
+#
+ldap ldaptls {
+	server = "$ENV{LDAP_TEST_SERVER}"
+
+	port = 3891
+
+	identity = 'cn=admin,dc=example,dc=com'
+	password = secret
+
+	base_dn = 'dc=subdept,dc=example,dc=com'
+
+	sasl {
+	}
+
+	global {
+		ldap_debug = 0x0801
+	}
+
+	valuepair_attribute = 'radiusAttribute'
+
+	update {
+		&control.Password.With-Header	+= 'userPassword'
+		&reply.Idle-Timeout		:= 'radiusIdleTimeout'
+		&reply.Framed-IP-Netmask	:= 'radiusFramedIPNetmask'
+
+		&control			+= 'radiusControlAttribute'
+		&request			+= 'radiusRequestAttribute'
+		&reply				+= 'radiusReplyAttribute'
+	}
+
+	user {
+		base_dn = "ou=people,${..base_dn}"
+
+		filter = "(uid=%{%{Stripped-User-Name}:-%{User-Name}})"
+
+		sasl {
+		}
+	}
+
+	group {
+		base_dn = "ou=groups,${..base_dn}"
+		filter = '(objectClass=groupOfNames)'
+		scope = 'sub'
+		name_attribute = cn
+		membership_filter = "(|(member=%{control.Ldap-UserDn})(memberUid=%{%{Stripped-User-Name}:-%{User-Name}}))"
+		membership_attribute = 'memberOf'
+		cacheable_name = no
+		cacheable_dn = no
+		cache_attribute = 'LDAP-Cached-Membership'
+	}
+
+	profile {
+		filter = '(objectclass=radiusprofile)'
+		default = 'cn=radprofile,ou=profiles,dc=example,dc=com'
+		attribute = 'radiusProfileDn'
+	}
+
+	accounting {
+		reference = "%{tolower:type.%{Acct-Status-Type}}"
+		type {
+			start {
+				update {
+					description := "User %{User-Name} is online"
+				}
+			}
+			interim-update {
+				update {
+					description := "Last seen at %S"
+				}
+			}
+			stop {
+				update {
+					description := "Offline at %S"
+				}
+			}
+		}
+	}
+
+	post-auth {
+		update {
+			description := "User %{User-Name} authenticated"
+		}
+	}
+
+	options {
+#		dereference = 'always'
+
+		chase_referrals = yes
+		rebind = yes
+		referral_depth = 2
+
+		timeout = 10
+		timelimit = 3
+		idle = 60
+		probes = 3
+		interval = 3
+
+	}
+
+	tls {
+		start_tls	= yes
+		require_cert	= 'allow'
+		ca_file	= 'src/tests/certs/rsa/ca.pem'
+	}
+
+	pool {
+		start = 1
+		min = 1
+		max = 4
+		spare = 3
+		uses = 0
+		lifetime = 0
+		idle_timeout = 60
+		retry_delay = 1
 	}
 }
