--- a/src/bin/.gitignore
+++ b/src/bin/.gitignore
@@ -1,9 +1,11 @@
 checkrad
 radlast
 radtest
-fuzzer_radius.mk
+fuzzer_dns.mk
 fuzzer_dhcpv4.mk
 fuzzer_dhcpv6.mk
+fuzzer_radius.mk
 fuzzer_tacacs.mk
-fuzzer_vmps.mk
 fuzzer_tftp.mk
+fuzzer_util.mk
+fuzzer_vmps.mk
