--- a/configure.ac
+++ b/configure.ac
@@ -249,7 +249,7 @@ dnl #
 AX_CC_IS_CLANG
 if test "x$ax_cv_cc_clang" = "xyes"; then
   AC_SUBST(clang_path, "$CC")
-  LDFLAGS="$LDFLAGS --rtlib=compiler-rt" # Needed for builtins to function correctly
+  LDFLAGS="$LDFLAGS --rtlib=compiler-rt --unwindlib=compiler-rt" # Needed for builtins to function correctly
 else
   AC_SUBST(clang_path, "")
 fi
