Add support for producing fuzzer seed corpuses from unit test data
Support changing the fuzzer output dir mid-file

Add test.fuzzer.merge to merge all corpuses

Run the unit tests before scheduled fuzzing

This dumps the latest seed data from the unit tests into the corpus dir

Add fuzzer output dirs to the unit tests

--- a/.github/workflows/ci-scheduled-fuzzing.yml
+++ b/.github/workflows/ci-scheduled-fuzzing.yml
@@ -185,6 +185,9 @@ jobs:
 
     # We walk up the tree if necessary to find a commit that builds so that we
     # will fuzz something
+    #
+    # When we find a working commit we run the unit tests to create seed data
+    # from the latest versions of the unit tests.
     - name: Find a commit that builds
       id: pick_commit
       run: |
@@ -206,6 +209,7 @@ jobs:
           git clean -fxd
         done
         echo "::set-output name=commit_id::$(git rev-parse --short HEAD)"
+        make test.unit
 
     - name: Run fuzzer tests
       run: |
