--- a/src/modules/rlm_sql/drivers/rlm_sql_oracle/all.mk.in
+++ b/src/modules/rlm_sql/drivers/rlm_sql_oracle/all.mk.in
@@ -12,3 +12,5 @@ SRC_CFLAGS  += -I${top_srcdir}/src/modules/rlm_sql
 # Comment this out if you're experiencing build errors
 SRC_CFLAGS  += -Wno-strict-prototypes
 TGT_LDLIBS	:= @mod_ldflags@
+
+$(call DEFINE_LOG_ID_SECTION,oracle,8,$(SOURCES))
