--- a/src/modules/rlm_mschap/rlm_mschap.mk.in
+++ b/src/modules/rlm_mschap/rlm_mschap.mk.in
@@ -8,3 +8,4 @@ SOURCES		:= $(TARGETNAME).c smbdes.c mschap.c @mschap_sources@
 
 SRC_CFLAGS	:= @mod_cflags@
 TGT_LDLIBS	:= @mod_ldflags@
+LOG_ID_LIB	= 32
