use another module for redundant tests

--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -76,6 +76,18 @@ $TEMPLATE template_test
 		ok
 		ok
 	}
+
+	test test1 {
+	}
+
+	test test2 {
+	}
+
+	redundant redundant_test {
+		test1
+		test2
+	}
+
 }
 
 policy {
